# algokit-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  algokit.toml  args.in.template  debug.py  entitlements.xml  poetry.toml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yaml  build-python.yaml  build-wheels.yaml  cd.yaml  check-python.yaml  ci.yaml  clear-caches.yaml  create-git-tag.yaml  create-version.yaml  fork-sync.yaml  issue_closed.yml  issue_commented.yml  issue_labelled.yml  makerx-build-python.yaml  podman-test.yaml  pr.yaml  publish-package-to-pypi.yaml  publish-release-packages.yaml  release-beta.yaml  release.yaml  sync-fork.yml  test-binaries.yaml  versioning.yaml  zendesk_github_add_comment.yml  zendesk_github_close_issue.yml
docs/: algokit.md  conf.py  index.md  reference.md
docs/architecture-decisions/: 2022-11-14_sandbox-approach.md  2022-11-22_beaker-testing-strategy.md  2023-01-11_beaker_productionisation_review.md  2023-01-11_brew_install.md  2023-01-12_smart-contract-deployment.md  2023-06-06_frontend-templates.md  2023-07-19_advanced_generate_command.md  2024-01-13_native_binaries.md  2024-01-15_native_binaries.md  2024-01-23_init-wizard-v2.md  2024-01-31_binary_distribution.md  2024-03-06_local_dev_ui_packaging.md
docs/articles/: output_stability.md
docs/cli/: conf.py  index.md  index.md.orig  index.rst
docs/features/: bootstrap.md  compile.md  completions.md  config.md  deploy.md  dispenser.md  doctor.md  explore.md  generate.md  goal.md  init.md  localnet.md  project.md  sandbox.md  tasks.md  transfer.md
docs/imgs/: algorand-icon-mac.icns
docs/sphinx/: conf.py
docs/tutorials/: algokit-template.md  intro.md  smart-contracts.md
misc/multiformats_config/: multibase-table.json  multicodec-table.json
scripts/: create-winget-package.ps1  install-poetry.sh  install-pyenv.sh  install-python.sh  package_mac.sh  package_windows.bat  setup.ps1  setup.sh  update-brew-cask.sh  update-brew-formula.sh  update-chocolatey-package.ps1  utilities.psm1
scripts/snap/: create-snapcraft-yaml.sh
scripts/winget/: AppxManifest.xml  build-installer.ps1  update-package.ps1
src/: .env.sample  localinvoke.py
src/algokit/: __init__.py  __main__.py
src/rdmak/: __init__.py  __main__.py
stores/: check_version.sh  snapcraft.yaml
tests/: __init__.py  conftest.py  test_root.py  test_root.test_help.approved.txt  test_sandbox_start.py  test_sandbox_start.test_sandbox_start.approved.txt  test_sandbox_start.test_sandbox_start_without_docker.approved.txt  test_sandbox_start.test_sandbox_start_without_docker_compose.approved.txt  test_sandbox_start.test_sandbox_start_without_docker_engine_running.approved.txt  test_testing.py
tests/bootstrap/: test_bootstrap.py  test_bootstrap.test_bootstrap_help.approved.txt  test_bootstrap_all.py  test_bootstrap_all.test_bootstrap_all_algokit_min_version.approved.txt  test_bootstrap_all.test_bootstrap_all_algokit_min_version_ignore_error.approved.txt  test_bootstrap_all.test_bootstrap_all_empty.approved.txt  test_bootstrap_all.test_bootstrap_all_env.approved.txt  test_bootstrap_all.test_bootstrap_all_npm.approved.txt  test_bootstrap_all.test_bootstrap_all_npm[linux].approved.txt  test_bootstrap_all.test_bootstrap_all_npm[macOS].approved.txt  test_bootstrap_all.test_bootstrap_all_npm[windows].approved.txt  test_bootstrap_all.test_bootstrap_all_poetry.approved.txt  test_bootstrap_all.test_bootstrap_all_poetry_via_pyproject.approved.txt  test_bootstrap_all.test_bootstrap_all_skip_dirs.approved.txt  test_bootstrap_all.test_bootstrap_all_sub_dir.approved.txt  test_bootstrap_env.py  test_bootstrap_env.test_bootstrap_env_dotenv_different_prompt_scenarios.approved.txt  test_bootstrap_env.test_bootstrap_env_dotenv_exists.approved.txt  test_bootstrap_env.test_bootstrap_env_dotenv_missing_template_exists.approved.txt  test_bootstrap_env.test_bootstrap_env_dotenv_with_values.approved.txt  test_bootstrap_env.test_bootstrap_env_multiple_templates.approved.txt  test_bootstrap_env.test_bootstrap_env_no_files.approved.txt  test_bootstrap_env.test_bootstrap_network_prefixed_envs..env.approved.txt  test_bootstrap_env.test_bootstrap_network_prefixed_envs..env.localnet.approved.txt  test_bootstrap_env.test_bootstrap_network_prefixed_envs..env.localnet.template.approved.txt  test_bootstrap_env.test_bootstrap_network_prefixed_envs..env.template.approved.txt  test_bootstrap_npm.py  test_bootstrap_npm.test_bootstrap_npm.approved.txt  test_bootstrap_npm.test_bootstrap_npm_happy_path[linux].approved.txt  test_bootstrap_npm.test_bootstrap_npm_happy_path[windows].approved.txt  test_bootstrap_npm.test_bootstrap_npm_npm_not_found.approved.txt  test_bootstrap_npm.test_bootstrap_npm_with_lower_npm_version.approved.txt  test_bootstrap_npm.test_bootstrap_npm_with_npm_without_package_file.approved.txt  test_bootstrap_npm.test_bootstrap_npm_without_npm[linux].approved.txt  test_bootstrap_npm.test_bootstrap_npm_without_npm[macOS].approved.txt  test_bootstrap_npm.test_bootstrap_npm_without_npm[windows].approved.txt  test_bootstrap_npm.test_bootstrap_npm_without_npm_and_package_file[linux].approved.txt  test_bootstrap_npm.test_bootstrap_npm_without_npm_or_package_file.approved.txt  test_bootstrap_npm.test_bootstrap_npm_without_npm_with_package_file.approved.txt  test_bootstrap_npm.test_bootstrap_npm_without_package_file[macOS].approved.txt  (+15 more)
tests/compile/: conftest.py  test_py.py  test_py.test_compile_py_help.approved.txt  test_py.test_invalid_contract.approved.txt  test_py.test_puyapy_is_installed_globally.approved.txt  test_py.test_puyapy_is_installed_in_project.approved.txt  test_py.test_puyapy_is_not_installed_anywhere.approved.txt  test_py.test_puyapy_not_installed_anywhere.approved.txt  test_py.test_specificed_puyapy_version_is_not_installed.approved.txt  test_py.test_valid_contract.contract.approval.teal.approved.txt  test_py.test_valid_contract.contract.clear.teal.approved.txt  (+12 more)
(+796 files in other folders)
