[tool.poetry]
name = "algokit"
version = "0.1.0"
description = "Algorand development kit command-line interface"
authors = ["Algorand Foundation <contact@algorand.foundation>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
httpx = "^0.23.1"
copier = "^7.1.0a0"
questionary = "^1.10.0"
pyclip = "^0.7.0"
shellingham = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {extras = ["d"], version = "^22.10.0"}
ruff = "^0.0.191"
pip-audit = "^2.4.7"
approvaltests = "^7.2.0"
pytest-mock = "^3.10.0"
mypy = "^0.991"
pytest-httpx = "^0.21.2"
python-semantic-release = "^7.32.2"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
sphinx = "^6.0.0"
sphinx-click = "^4.4.0"
sphinxnotes-markdown-builder = "^0.5.6"
poethepoet = "^0.17.1"
gfm-toc = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
algokit = "algokit.cli:algokit"

[tool.poe.tasks]
docs_generate = "sphinx-build -b markdown -E docs/sphinx docs/cli"
docs_toc = "gfm-toc docs/cli/index.md -e 3"
docs_title = {shell = "(echo \"# AlgoKit CLI Reference Documentation\\n\\n\"; cat docs/cli/index.md) > docs/cli/temp.md && mv docs/cli/temp.md docs/cli/index.md"}
docs = ["docs_generate", "docs_toc", "docs_title"]

[tool.ruff]
line-length = 120
select = ["E", "F", "ANN", "UP", "N", "C", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
# note: remove A003 once flake8-builtins: builtins-ignorelist supported and can ignore id
ignore = ["ANN101", "C901", "A003"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs/sphinx",
]
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.mypy]
files = ["src"]
exclude = ["dist", "tests"]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
remove_dist = false
build_command = "poetry build --format wheel"
version_source = "tag"
major_on_zero = false
upload_to_repository = false
tag_commit = true
branch = "main"
commit_message = "{version}\n\nskip-checks: true"
