[tool.poetry]
name = "algokit"
version = "1.5.0"
description = "Algorand development kit command-line interface"
authors = ["Algorand Foundation <contact@algorand.foundation>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
httpx = "^0.23.1"
copier = "^7.1.0"
questionary = "^1.10.0"
pyclip = "^0.7.0"
shellingham = "^1.5.0.post1"
algokit-client-generator = "^1.0.2"
tomli = { version = "^2.0.1", python = "<3.11" }
python-dotenv = "^1.0.0"
# workaround for issue with copier dependency spec allowing major upgrade to pydantic v2
pydantic = "^1.10.2"
mslex = "^1.1.0"
keyring = "^24.2.0"
pyjwt = "^2.8.0"
auth0-python = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = {extras = ["d"], version = "^23.1.0"}
ruff = "^0.0.275"
pip-audit = "^2.4.7"
approvaltests = "^7.2.0"
pytest-mock = "^3.10.0"
mypy = "^1.0.0"
pytest-httpx = "^0.21.2"
python-semantic-release = "^7.32.2"
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
sphinx = "^6.0.0"
sphinx-click = "^4.4.0"
sphinxnotes-markdown-builder = "^0.5.6"
poethepoet = "^0.17.1"
gfm-toc = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
algokit = "algokit.cli:algokit"

[tool.poe.tasks]
docs_generate = "sphinx-build -b markdown -E docs/sphinx docs/cli"
docs_toc = "gfm-toc docs/cli/index.md -e 3"
docs_title = {shell = "(echo \"# AlgoKit CLI Reference Documentation\\n\\n\"; cat docs/cli/index.md) > docs/cli/temp.md && mv docs/cli/temp.md docs/cli/index.md"}
docs = ["docs_generate", "docs_toc", "docs_title"]

[tool.ruff]
line-length = 120
select = [
  # all possible codes as of this ruff version are listed here,
  # ones we don't want/need are commented out to make it clear
  # which have been omitted on purpose vs which ones get added
  # in new ruff releases and should be considered for enabling
  "F",      # pyflakes
  "E", "W", # pycodestyle
  "C90",    # mccabe
  "I",      # isort
  "N",      # PEP8 naming
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
  "ANN",    # flake8-annotations
  # "S",    # flake8-bandit
  # "BLE",  # flake8-blind-except
  "FBT",    # flake8-boolean-trap
  "B",      # flake8-bugbear
  "A",      # flake8-builtins
  # "COM",  # flake8-commas
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "T10",    # flake8-debugger
  # "DJ",   # flake8-django
  # "EM",   # flake8-errmsg
  # "EXE",  # flake8-executable
  "ISC",    # flake8-implicit-str-concat
  "ICN",    # flake8-import-conventions
  # "G",    # flake8-logging-format
  # "INP",  # flake8-no-pep420
  "PIE",    # flake8-pie
  "T20",    # flake8-print
  "PYI",    # flake8-pyi
  "PT",     # flake8-pytest-style
  "Q",      # flake8-quotes
  "RSE",    # flake8-raise
  "RET",    # flake8-return
  "SLF",    # flake8-self
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "TCH",    # flake8-type-checking
  "ARG",    # flake8-unused-arguments
  "PTH",    # flake8-use-pathlib
  "ERA",    # eradicate
  # "PD",   # pandas-vet
  "PGH",    # pygrep-hooks
  "PL",     # pylint
  # "TRY",  # tryceratops
  # "NPY",  # NumPy-specific rules
  "RUF",    # Ruff-specific rules
]
ignore = [
  "ANN101", # no type for self
  "ANN102", # no type for cls
  "SIM108", # allow if-else in place of ternary
  "RET505", # allow else after return
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs/sphinx",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.10.
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/**/test_*.py" = ["PLR0913"] # too many args

[tool.ruff.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
markers = [
    "mock_platform_system",
]
[tool.mypy]
files = ["src", "tests"]
exclude = ["dist"]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false

[[tool.mypy.overrides]]
module = "approvaltests.*"
ignore_missing_imports = true

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
remove_dist = false
build_command = "poetry build --format wheel"
version_source = "tag"
major_on_zero = true
upload_to_repository = false
tag_commit = true
branch = "main"
commit_message = "{version}\n\nskip-checks: true"
